# AutoScraper24_API

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
src/autoscraper24_api/: app.py  data_scraper.py
